Added Main and state that works as component switcher

--- a/src/components/SignUp/Sign.css
+++ b/src/components/SignUp/Sign.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-.main {
+.sign {
     background: rgb(174, 238, 186);
     background: radial-gradient(
         circle,
