--- a/src/components/SignUp/Main/Main.css
+++ b/src/components/SignUp/Main/Main.css
@@ -1,3 +1,19 @@
 .main {
     display: none;
+    background: rgb(174, 238, 186);
+    background: radial-gradient(
+        circle,
+        rgba(174, 238, 186, 1) 0%,
+        rgba(193, 233, 148, 1) 100%
+    );
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+}
+
+h1 {
+    color: white;
 }
