--- a/src/components/SignUp/Main/Main.css
+++ b/src/components/SignUp/Main/Main.css
@@ -13,7 +13,19 @@
     align-items: center;
     flex-direction: column;
 }
-
-h1 {
+h2 {
     color: white;
+    margin: 0;
+}
+
+.check {
+    display: flex;
+    justify-content: space-between;
+    width: 25%;
+}
+
+.checkbox {
+    background-color: rebeccapurple;
+    width: 30px;
+    margin: 0;
 }
